# Junto-Holochain-Alpha-API

./: .gitignore  Cargo.toml  README.md  conductor-config.toml  development-conductor-config.toml  start-development-conductor.sh
conductor_generator/: Cargo.toml
conductor_generator/src/: conductor_strings.rs  create.rs  main.rs  write.rs
deployment/: conductor-supervisor.conf  nginx-conf  restart.sh  start-development-conductor.sh  web-app-supervisor.conf
docs/: README.md  holochain.md  user.md
migrations/2019-07-22-085317_create_user/: up.sql
src/: development.env  errors.rs  main.rs  schema.rs
src/db/: mod.rs
src/db/models/: mod.rs
src/handlers/: auth.rs  holochain.rs  mod.rs
src/models/: collection.rs  config.rs  expression.rs  group.rs  mod.rs  persepective.rs  user.rs  zome_definitions.rs
src/models/db/: mod.rs  user.rs
src/token/: mod.rs
src/utils/: holochain.rs  jwt.rs  middleware.rs  mod.rs  wrapper.rs
stress_testing/: Cargo.toml
stress_testing/src/: main.rs
