[package]
name = "junto_holochain_alpha_api"
version = "0.1.0"
authors = ["jdeepee <joshuadparkin@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = { version = "1.0.5", features = ["ssl"] }
actix-rt = "0.2.2"
actix-threadpool = "0.1.2"
actix-service = "0.4"
actix-identity = "0.1.0"
reqwest = "0.9.20"
dotenv = "0.10.0"
diesel = { version = "1.4.2", features = ["postgres", "r2d2", "uuidv07"] }
futures = "0.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
json = "*"
validator = "0.9.0"
validator_derive = "0.9.0"
uuid = { version = "0.7.4", features = ["serde", "v4"] }
failure = "0.1.5"
time = "0.1.42"
num_cpus = "1.10.0"
bcrypt = "0.4"
listenfd = "0.3"
chrono = "0.4.7"